added submit input

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <!-- TODO: Checkboxes for selecting extra add-ons -->
             
             <!-- TODO: Submit Button -->
+            <div><input type = "Submit" value = "Enter the Contest"></div>
         </form>
     </main>
     <footer>
