--- a/index.html
+++ b/index.html
@@ -12,22 +12,63 @@
     </nav>
     <main>
         <h2>Vacation Contest Sign-Up Form</h2>
-        <form> <!-- TODO: Set Action and Method Properties -->
+        <!-- TODO: Set Action and Method Properties -->
+        <form method="POST" action="results.html">
             <div>
                 <label for="firstname">Your First Name</label>
                 <input type="text" id="firstname" name="firstname">
                 <!-- TODO: Create a "lastname" input with type "text" -->
+                <label for="lastname">Your Last Name</label>
+                <input type="text" id="lastname" name="lastname">
             </div>
             <!-- TODO: Make fieldset and legend -->
             <!-- Todo: Email Input -->
+                <label for="email">Email Address</label>
+                <input type= "text" id="email" name="email">
             <!-- Todo: Street Address Input -->
+                <label for="address">Street Address</label>
+                <input type= "text" id="address" name="address">
             <!-- Todo: City, State, and Zip Inputs -->
-
+                <label for="city">City</label>
+                <input type="text" id ="city" name="city">
+                <select name="state">
+                    <option value="AK">Alaska</option>
+                    <option value="NJ">New Jersey</option>
+                    <option value="NY">New York</option>
+                </select>
+                <label for="zip">Zip Code</label>
+                <input type="text" id ="zip" name="zip">
             <!-- TODO: Second fieldset -->
             <!-- TODO: Radio buttons for selecting preferred destination -->
+                <div>
+                    <label>Aruba</label>
+                    <input type="radio" value="Aruba" name="location">
+                </div>
+                <div>
+                    <label>Japan</label>
+                    <input type="radio" value="Japan" name="location">
+                </div>
+                <div>
+                    <label>Reykjavik</label>
+                    <input type="radio" value="Reykjavik" name="location">
+                </div>
+                <div>
+                    <label>New Zealand</label>
+                    <input type="radio" value="New Zealand" name="location">
+                </div>
             <!-- TODO: Color input for selecting favorite color -->
+                <label for="color">Favorite Color</label>
+                <input type= "color" id="color" name="color">
             <!-- TODO: Checkboxes for selecting extra add-ons -->
-            
+            <div>
+                <h4>Favorite Meal</h4>
+                <label for="breakfast">Breakfast</label>
+                <input type= "checkbox" id="breakfast" name="breakfast">
+                <label for="lunch">Lunch</label>
+                <input type= "checkbox" id="lunch" name="lunch">
+                <label for="dinner">Dinner</label>
+                <input type= "checkbox" id="dinner" name="dinner">
+            </div>
             <!-- TODO: Submit Button -->
             <div><input type = "Submit" value = "Enter the Contest"></div>
         </form>
