--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                 <input type="text" id="lastname" name="lastname">
             </div>
             <!-- TODO: Make fieldset and legend -->
+            <fieldset>
+                <legend>Your Contact Info</legend>
             <!-- Todo: Email Input -->
                 <label for="email">Email Address</label>
                 <input type= "text" id="email" name="email">
@@ -37,8 +39,12 @@
                     <option value="NY">New York</option>
                 </select>
                 <label for="zip">Zip Code</label>
+                <input type="number" id="zip" name="zip"
                 <input type="text" id ="zip" name="zip">
+            </fieldset>
             <!-- TODO: Second fieldset -->
+            <fieldset>
+                <legend>Your Preferences</legend>
             <!-- TODO: Radio buttons for selecting preferred destination -->
                 <div>
                     <label>Aruba</label>
@@ -69,6 +75,7 @@
                 <label for="dinner">Dinner</label>
                 <input type= "checkbox" id="dinner" name="dinner">
             </div>
+        </fieldset>
             <!-- TODO: Submit Button -->
             <div><input type = "Submit" value = "Enter the Contest"></div>
         </form>
