--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
         <!-- TODO: Set Action and Method Properties -->
         <form method="POST" action="results.html">
             <div>
-                <label for="firstname">Your First Name</label>
-                <input type="text" id="firstname" name="firstname">
+                <label for="firstname">Your First Name<span class="required-field"></span></label>
+                <input type="text" id="firstname" name="firstname" required minlength="2" maxlength="35">
                 <!-- TODO: Create a "lastname" input with type "text" -->
-                <label for="lastname">Your Last Name</label>
-                <input type="text" id="lastname" name="lastname">
+                <label for="lastname">Your Last Name<span class="required-field"></span></label>
+                <input type="text" id="lastname" name="lastname" required minlength="2" maxlength="35">
+                <label for="age">Your Age</label>
+                <input type="number" id="age" name="age" minlength="21" maxlength="120">
+                    <h5>*Disclaimer: Must be age 21 years or older to enter*</h5>
             </div>
             <!-- TODO: Make fieldset and legend -->
             <fieldset>
@@ -40,7 +43,6 @@
                 </select>
                 <label for="zip">Zip Code</label>
                 <input type="number" id="zip" name="zip"
-                <input type="text" id ="zip" name="zip">
             </fieldset>
             <!-- TODO: Second fieldset -->
             <fieldset>
