--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
                 </select>
                 <label for="zip">Zip Code</label>
                 <input type="text" id="zip" name="zip" pattern="[0-9]{5}" title="5-Digit US Zip Code">
+                <label for="password">Your Secret Code (must be 6 alphanumeric characters)<span class="required-field">*</span></label>
+                <input type="password" id="password" name="password" pattern="[0-9a-zA-Z]{6}" title="6-Character Alphanumeric Pass Code" required>
             </fieldset>
             <!-- TODO: Second fieldset -->
             <fieldset>
